@@ -41,6 +41,14 @@ task payara(type: Exec, dependsOn: war) {
     commandLine(
         'java',
         '-verbose:gc',
+        '-XX:+HeapDumpOnOutOfMemoryError',
+        '-XX:HeapDumpPath=./hprof/',
+        '-Xloggc:./gclog/gc.log',
+        '-XX:+PrintGCDateStamps',
+        '-XX:+PrintGCDetails',
+        '-XX:+UseGCLogFileRotation',
+        '-XX:NumberOfGCLogFiles=5',
+        '-XX:GCLogFileSize=10m',
         '-Xms256m',
         '-Xmx512m',
         '-Xdebug',
